--- a/week5_tech_blog.html
+++ b/week5_tech_blog.html
@@ -14,7 +14,7 @@
 
 <p>Take a look at my example bellow. Our Class, Animals, is the object, it contains variables and methods that defines it's purpose in life. The instance variable, animal_type, is the data that the object is provided with. The object can take that data and put it through some methods to receive a desired output. The methods in this class are speak and babies (my brain wasn't working and I couldn't come up with anything clever!) These methods will take the instance variable and deside what your output will be usng the data.</p>
 
-<img src = "class_example.png"/>
+<h1><img src = "class_example.png"/></h1>
 
 <p>I hope this was helpful :)</p>
 
