--- a/week5_cultural_blog.html
+++ b/week5_cultural_blog.html
@@ -9,13 +9,16 @@
 <h1>Problems Facing the Tech World</h1>
 <h2>Where have all the women gone?</h2></br>
 
-<p>In a <a href = "https://docs.google.com/spreadsheet/ccc?key=0AlZH8QBl60oodEJTdFA5TlZOcDJCMU02RkZoSHF5SHc&_ga=1.145845175.2067525685.1397444523#gid=0">google spreadsheet</a> created by Tracy Chou, a software engineer at Pinterest, looking at the statistics of women in software engineering, it was found that tech companies on average employ 12.35% women engineers. Looking deeper into this, companies such as Mozilla, which employ over 500 engineers, have only 8.60% of them as female.</p>
+<p>In a <a href = "https://docs.google.com/spreadsheet/ccc?key=0AlZH8QBl60oodEJTdFA5TlZOcDJCMU02RkZoSHF5SHc&_ga=1.145845175.2067525685.1397444523#gid=0">google spreadsheet</a> created by Tracy Chou, a software engineer at Pinterest, looking at the statistics of women in software engineering, it was found that tech companies on average employ 12.35% women engineers. Looking deeper into this, companies such as Mozilla, which employ over 500 engineers, have only 8.60% of them as female. I'm not saying that this is a huge tragity, but it is definitely something to look into. With just about 50% of the people that are using this technology being women, it would make sense that women had an input in creating it. Even Pinterest, a website that is basically geared towards women, only employs just over 13% women as software engineers. I don't think this lack of female employment in the software industry is from sexist hiring, but rather from a lack of women trained in software engineering. Looking at the <a href = "http://www.cra.org/uploads/documents/resources/taulbee/CS_Degree_and_Enrollment_Trends_2010-11.pdf?_ga=1.175260705.2067525685.1397444523">computer science enrollment trends of 2011</a>, you can see that only 11% of the computer science graduates are female. If the future of technology is to reach as many people as possible, and be enjoyed by everyone, it would make sense that a diverse group of people had a hand at making it. </p>
 
-<p>I'm not saying that this is a huge tragity, but it is definitely something to look into. With just about 50% of the people that are using this technology being women, it would make sense that women had an input in creating it. Even Pinterest, a website that is basically geared towards women, only employs just over 13% women as software engineers. </p>
-
-<p>I don't think this lack of female employment in the software industry is from sexist hiring, but rather from a lack of women trained in software engineering. Looking at the <a href = "http://www.cra.org/uploads/documents/resources/taulbee/CS_Degree_and_Enrollment_Trends_2010-11.pdf?_ga=1.175260705.2067525685.1397444523">computer science enrollment trends of 2011</a>, you can see that only 11% of the computer science graduates are female.</p>
-
-<p>With a huge demand for female software engineers and a small supply, just saying, I'm jumping into this career at a good time ;)</p>
+<p>Some great ideas brought up in this <a href = "http://www.forbes.com/sites/work-in-progress/2012/06/20/stem-fields-and-the-gender-gap-where-are-the-women/">Forbes Articel</a>to improve the lack of women studying tech, include:
+<ul>
+	<li>Creating programs that encourage women to study tech.</li>
+	<li>Rework the K-12 curriculum to encourage young girls to purse opportunities in tech.</li>
+	<li>Combat stereotypes by advertising female successes in the tech world.</li>
+</ul>
+With a little bit of work, the tech world will be moving towards a more diverse and equal future.
+</P>
 
 </body>
 
