fixing alignment issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
 	
-<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="1300" height=auto>
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
 	<figcaption align="center">Around the World and Back Again</figcaption>
 </figure>
 
