--- a/week5_tech_blog.html
+++ b/week5_tech_blog.html
@@ -6,6 +6,23 @@
 <body>
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
 
+
+<header>
+	
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
+</figure>
+
+</header>
+
+<nav class="button">
+	<a href = "index.html">Homepage</a>
+	<a href = "dbc1.html">About Me</a>
+	<a href = "blog.html">Blog</a>
+	<a href = "dbc2.html">Photography</a>
+	<a href = "vidios.html">Videos</a>
+</nav>
+
 <h1>Class Is In Session</h1>
 
 <p>Being that Ruby is an object-oriented language, everything you use in Ruby is an object. You use the object to do whatever it is that needs to be done, but in order for that to happen, the object needs to hold vital information that allows it to accomplish the tasks. This is where classes come in.</p>
