--- a/week4_cultural_blog.html
+++ b/week4_cultural_blog.html
@@ -6,6 +6,22 @@
 <body>
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
 
+<header>
+	
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
+</figure>
+
+</header>
+
+<nav class="button">
+	<a href = "index.html">Homepage</a>
+	<a href = "dbc1.html">About Me</a>
+	<a href = "blog.html">Blog</a>
+	<a href = "dbc2.html">Photography</a>
+	<a href = "vidios.html">Videos</a>
+</nav>
+
 <h1>Conflict</h1>
 	<h2>The greatest conflicts are not between two people but between one person and himself.
 ~Garth Brooks </h2>
