--- a/vidios.html
+++ b/vidios.html
@@ -24,17 +24,7 @@
 
 </br><h1>My Travels</h1>
 
-<object width="160" height="144"
-classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
-codebase="http://www.apple.com/qtactivex/qtplugin.cab">
-<param name="src" value="Camino de Santiago.mov">
-<param name="autoplay" value="true">
-<param name="controller" value="false">
-
-<embed src="sample.mov" width="160" height="144"
-autoplay="true" controller="false"
-pluginspage="http://www.apple.com/quicktime/download/">
-</embed>
+<iframe width="560" height="315" src="//www.youtube.com/embed/tSqfXXhQcek" frameborder="0" allowfullscreen></iframe>
 
 </object>
 
