--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@ I took the one less traveled by,</br>
 And that has made all the difference. </br>
 </br>
 Robert Frost </strong></p>
-</section>
+</section> </br>
+
+<iframe width="200" height="25" src="https://embed.spotify.com/follow/1/?uri=spotify%3Aartist%3A6eUKZXaKkcviH0Ku9w2n3V&amp;size=basic" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+
+
+
 <footer>
 	<nav class= "button">
 		<a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">  Email Jessica  </a>
