--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ And that has made all the difference. </br>
 Robert Frost </strong></p>
 </section> </br>
 
-<iframe width="200" height="25" src="https://embed.spotify.com/follow/1/?uri=spotify%3Aartist%3A6eUKZXaKkcviH0Ku9w2n3V&amp;size=basic" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
-
+<iframe src="https://embed.spotify.com/?uri=spotify:album:7lZs5r4oQV2nutddffLrg0" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
 
 
 <footer>
