update cultural blog

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 	<a href = "dbc1.html">About Me</a>
 	<a href = "blog.html">Blog</a>
 	<a href = "dbc2.html">Photography</a>
-	<a href = "">Videos</a>
+	<a href = "vidios.html">Videos</a>
 </nav>
 
 <h1> Blog Spot </h1>
@@ -33,10 +33,13 @@
 	<li><a href = "week2_technical.html"> A Little Bit Technical </a></li></br>
 	<li><a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a></li> </br>
 	<li><a href = "week3_technical.html"> A Little Bit More Technical </a></li></br>
-	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
 	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li></br>
+	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
 	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li></br>
 	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li></br>
+	<li><a href = "week6_tech_blog.html"> Functional Programming</a></li></br>
+	<li><a href = "week6_cultural_blog.html"> Stereotype Threat </a></li></br>
+
 </ul>
 </div>
 
