update tech blog

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
 	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li></br>
 	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li></br>
-	<li><a href = "week6_tech_blog.html"> Functional Programming</a></li></br>
+	<li><a href = "week6_tech_blog.html"> Functional Programming vs. Object-Oriented Programming</a></li></br>
 	<li><a href = "week6_cultural_blog.html"> Stereotype Threat </a></li></br>
 
 </ul>
