--- a/week6_cultural_blog.html
+++ b/week6_cultural_blog.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
-	<title>Classes</title>
+	<title>Blog</title>
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
