--- a/week6_tech_blog.html
+++ b/week6_tech_blog.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
-	<title>Classes</title>
+	<title>Blog</title>
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
@@ -23,8 +23,28 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-<h1>Functional Programming</h1>
+<h1>Functional Programming vs. Object-Oriented Programming</h1>
 
+<p>Ruby is mostly considered to be an object-oriented programming language, although it has been debated that it still untilizes some practices used in Functional programming. Since I am still a newby in programming and don't really have enough background to make a educated arguement either way, I thought I would give you guys an idea about what each programming type is all about. </p> 
+
+
+<p>Object-Oriented Programming:
+OOP utilizes methods and classes in its codes in order to create objects that have various properties while the object is in its given state. The output of a program can vary based on how it is processed through the methods.  
+
+Simple Example of OOP code:
+
+<img src = "math.png"/>
+
+As you can see, depending on whether you are utilizing the add method or subtract method, your output will vary. 
+</p>
+
+<p>Functional Programming:
+Functional Programming can best be described as a concept which models mathmatical functions. FP has no objects or 'states', its output has no variation or side effects. 
+
+Example: I don't have any experience using functional programming, so I stole an example from a <a href = "http://programmers.stackexchange.com/questions/9730/functional-programming-vs-oop">website</a>.
+
+<img src = "FP.png"/>
+</p>
 
 
 <p>I hope this was helpful :)</p>
