update tech blog

--- a/week6_tech_blog.html
+++ b/week6_tech_blog.html
@@ -33,9 +33,12 @@ OOP utilizes methods and classes in its codes in order to create objects that ha
 
 Simple Example of OOP code:
 
+</p>
 <img src = "math.png"/>
 
-As you can see, depending on whether you are utilizing the add method or subtract method, your output will vary. 
+
+
+<p>As you can see, depending on whether you are utilizing the add method or subtract method, your output will vary. 
 </p>
 
 <p>Functional Programming:
@@ -43,9 +46,9 @@ Functional Programming can best be described as a concept which models mathmatic
 
 Example: I don't have any experience using functional programming, so I stole an example from a <a href = "http://programmers.stackexchange.com/questions/9730/functional-programming-vs-oop">website</a>.
 
-<img src = "FP.png"/>
 </p>
 
+<img src = "FP.png"/>
 
 <p>I hope this was helpful :)</p>
 
