creating week7 tech and cultural blogs

--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,8 @@
 	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li></br>
 	<li><a href = "week6_tech_blog.html"> Functional Programming vs. Object-Oriented Programming</a></li></br>
 	<li><a href = "week6_cultural_blog.html"> Stereotype Threat </a></li></br>
+	<li><a href = "week7_tech_blog.html"> SQL vs. NoSQL </a></li></br>
+	<li><a href = "week7_cultural_blog.html"> Revisiting My Values </a></li></br>
 
 </ul>
 </div>
