update week 7 cultural blog

--- a/week7_cultural_blog.html
+++ b/week7_cultural_blog.html
@@ -25,6 +25,7 @@
 
 <h1>Revisiting My Values</h1>
 
+<p>Back in week 2 of DevBootcamp, they asked us to identify our values that make us happiest. My greatest value for happiness was adventure. I believe that this is my biggest defence against stereotype threat. The more one lives life to its fullest and experiences the world, the more sense of self one grows and the less you rely on stereotypes to define you. When you live in a box and don't learn about different cultures and experience different countries, you will only know what people tell you. This is where stereotypes stem from. It is up to you to learn the truth, which in turn disuades the stereotypes and allows you to be happy with who you are as an individual in this world. To keep this short and sweet, in the words of Aldous Huxley: "To travel is to discover that everyone is wrong about other countries."</p>
 
 </body>
 
