updating tech blog for week7

--- a/week7_tech_blog.html
+++ b/week7_tech_blog.html
@@ -25,9 +25,32 @@
 
 <h1>SQL vs. NoSQL</h1>
 
+<h2>SQL databases</h2>
 
+<p>So far, while studying SQL this week, I've found it to be easy and user friendly. Here are a few key features about SQL:</p>
 
-<p>I hope this was helpful :)</p>
+<ul>
+	<li>Relational Database</li>
+	<li>Table based: SQL stores its data in tables that consist of rows and columns of data.</li>
+	<li>Vertically scalable</li>
+	<li>SQL databases use stuctured query language to define and manipulate data.</li>
+	<li>SQL is best used for complex query iintensice enviroments.</li>
+</ul>
+
+<h2>NoSQL databases</h2>
+
+<p>I have not yet used a NoSQL database, but from my research, I have found that it is extremely different from SQL. Here are some key fetures about NoSQL:</p>
+
+<ul>
+	<li>Non-Relational Database</li>
+	<li>Document based, key-value pairs, graph databases, or wide column stores: This allows NoSQL databases to not have to adhere to standard schema definitions</li>
+	<li>Horizontally scalable</li>
+	<li>NoSQL focuses on the collection of documents.</li>
+	<li>NoSQL is not a good fit for complex queries, but rather for large traffic horizonally scalable databases. </li>
+</ul>
+
+<p>Both SQL and NoSQL have their places within the database world, it's just a matter of choosing which one will suit your purposes.</p>
+<p>I got most of my information for this blog post from thegeekstuff.com.</p>
 
 </body>
 
