--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,8 @@
 	<li><a href = "week6_tech_blog.html"> Functional Programming vs. Object-Oriented Programming</a></li></br>
 	<li><a href = "week6_cultural_blog.html"> Stereotype Threat </a></li></br>
 	<li><a href = "week7_tech_blog.html"> SQL vs. NoSQL </a></li></br>
-	<li><a href = "week7_cultural_blog.html"> Revisiting My Values </a></li></br>
+	<li><a href = "week7_cultural_blog.html"> Revisiting My Values </a></li></br><li><a href = "week8_tech_blog.html"> What is Rails? </a></li></br>
+	<li><a href = "week8_cultural_blog.html"> Chefs in the Kitchen </a></li></br>
 
 </ul>
 </div>
