update spacing in tech blog

--- a/week8_tech_blog.html
+++ b/week8_tech_blog.html
@@ -25,14 +25,14 @@
 
 <h1>What is Rails?</h1>
 
-<p>"Rails is a web application development framework written in the Ruby language." - <a href = "http://guides.rubyonrails.org/getting_started.html">RailsGuides</a>
+<p>     "Rails is a web application development framework written in the Ruby language." - <a href = "http://guides.rubyonrails.org/getting_started.html">RailsGuides</a></br>
 	What does this mean? Well basically, Rails is a framework for building websites. It is designed to simplify the task of building complex websites by providing features that it assumes every developer needs. This allows developers to accomplish more while writing less code. Rails has two major guiding principles: </p>
 
 <img src = "rails_principles.jpg"/>
 </br>
-<p>According to <a href = "http://ruby.about.com/od/rubyonrails/a/whatisrails.htm">this website</a>, Rails is a model-view-cotroller framework. Basically, it separates a web app into three secions: the model, the controller, and the view. The model works with all database interaction, the controller works with the web server interaction and the view compiles the HTML code that users of the website will see. Ruby on Rails is unique in that it takes these three concepts and bundles them into one kit for web development. All these pieces put together allows developers to make complex web apps with ease.
+<p>      According to <a href = "http://ruby.about.com/od/rubyonrails/a/whatisrails.htm">this website</a>, Rails is a model-view-cotroller framework. Basically, it separates a web app into three secions: the model, the controller, and the view. The model works with all database interaction, the controller works with the web server interaction and the view compiles the HTML code that users of the website will see. Ruby on Rails is unique in that it takes these three concepts and bundles them into one kit for web development. All these pieces put together allows developers to make complex web apps with ease.</p>
 </br>
-Not only is Rails easy and fun to use, but it is also widely used. Websites such as Github, Twitter, Scribd, and Hulu, all were developed using Ruby on Rails. It is significantly popular among web startups because Rails has a large pool of open source software libraries. Rails has a pretty strict requirements, which means, if you create your web app the 'Rails way', all Rails developers will be able to understand your code. This means that collaboration is easier, development is quicker, and the overall process of making a web application is shared with the Rails community.</p>
+<p>      Not only is Rails easy and fun to use, but it is also widely used. Websites such as Github, Twitter, Scribd, and Hulu, all were developed using Ruby on Rails. It is significantly popular among web startups because Rails has a large pool of open source software libraries. Rails has a pretty strict requirements, which means, if you create your web app the 'Rails way', all Rails developers will be able to understand your code. This means that collaboration is easier, development is quicker, and the overall process of making a web application is shared with the Rails community.</p>
 
 <p>I hope this little introduction into what Rails is has been helpful!</p>
 
