style adjustments on tech blog

--- a/week8_tech_blog.html
+++ b/week8_tech_blog.html
@@ -28,7 +28,7 @@
 <p>     "Rails is a web application development framework written in the Ruby language." - <a href = "http://guides.rubyonrails.org/getting_started.html">RailsGuides</a></br>
 	What does this mean? Well basically, Rails is a framework for building websites. It is designed to simplify the task of building complex websites by providing features that it assumes every developer needs. This allows developers to accomplish more while writing less code. Rails has two major guiding principles: </p>
 
-<img src = "rails_principles.jpg" style = "float: center;"/>
+<img src = "rails_principles.jpg" style = "float: left;"/>
 </br>
 <p>      According to <a href = "http://ruby.about.com/od/rubyonrails/a/whatisrails.htm">this website</a>, Rails is a model-view-cotroller framework. Basically, it separates a web app into three secions: the model, the controller, and the view. The model works with all database interaction, the controller works with the web server interaction and the view compiles the HTML code that users of the website will see. Ruby on Rails is unique in that it takes these three concepts and bundles them into one kit for web development. All these pieces put together allows developers to make complex web apps with ease.</p>
 
