finished week 9 cultural blog

--- a/blog.html
+++ b/blog.html
@@ -42,6 +42,7 @@
 	<li><a href = "week7_tech_blog.html"> SQL vs. NoSQL </a></li></br>
 	<li><a href = "week7_cultural_blog.html"> Revisiting My Values </a></li></br><li><a href = "week8_tech_blog.html"> What is Rails? </a></li></br>
 	<li><a href = "week8_cultural_blog.html"> Chefs in the Kitchen </a></li></br>
+	<li><a href = "week9_cultural_blog.html">Thinking Styles</a></li></br>
 
 </ul>
 </div>
