working on Nav bar

--- a/index.html
+++ b/index.html
@@ -15,16 +15,30 @@
 </figure>
 
 </header>
+<nav class="navbar">
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "#">Jessica Tatham</a>
+			<ul>
+				<li><a href = "dbc1.html">About Me</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Blogs</a>
+			<ul>
+				<li><a href = "blog.html">Cultural Blogs</a></li>
+				<li><a href = "blog.html">Technical Blogs</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Travel</a>
+			<ul>
+				<li><a href = "dbc2.html">Photography</a></li>
+				<li><a href = "videos.html">Videos</a></li>
+			</ul>
+		</li>
 
-<nav class="button">
-	<a href = "index.html">Homepage</a>
-	<a href = "dbc1.html">About Me</a>
-	<a href = "blog.html">Blog</a>
-	<a href = "dbc2.html">Photography</a>
-	<a href = "vidios.html">Videos</a>
+	</ul>
 </nav>
-
-
 
 
 <section>
