--- a/favorite_websites.html
+++ b/favorite_websites.html
@@ -1,10 +1,25 @@
-<DOCTYPE! html>
 <html>
 <head>
-	<title>Favorite websites</title>
+	<title>Blog Spot</title>
 </head>
 <body>
-	<link rel="stylesheet" type="text/css" href="favorite_website.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
+
+<header>
+	
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
+</figure>
+
+</header>
+
+<nav class="button">
+	<a href = "index.html">Homepage</a>
+	<a href = "dbc1.html">About Me</a>
+	<a href = "blog.html">Blog</a>
+	<a href = "dbc2.html">Photography</a>
+	<a href = "vidios.html">Videos</a>
+</nav>
 
 <h1>My Favorite Websites</h1>
 <ul>
