--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </figure>
 
 </header>
-<nav class="navbar">
+<nav>
 	<ul>
 		<li><a href = "index.html">Home</a></li>
 		<li><a href = "#">Jessica Tatham</a>
