--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 
-
+<body>
 <header>
 	
 <figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
@@ -15,7 +15,7 @@
 </figure>
 
 </header>
-<nav>
+<nav class = "navbar">
 	<ul>
 		<li><a href = "index.html">Home</a></li>
 		<li><a href = "#">Jessica Tatham</a>
@@ -39,7 +39,6 @@
 
 	</ul>
 </nav>
-<body>
 
 <section>
 	</br></br><p> 
