adding visiter tracker

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<ul>
 				<li><a href = "dbc1.html">About Me</a></li>
 				<li><a href = "resume.html">Resume</a></li>
+				<li><a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></li>
+				<li><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
 			</ul>
 		</li>
 		<li><a href = "#">Blogs</a>
@@ -73,13 +76,11 @@ Robert Frost </strong></p>
 
 
 <footer>
-	<nav class= "button">
-		<a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">  Email Jessica  </a>
-		<a href="https://www.facebook.com/JessicaHTatham">  Facebook  </a>
-		<a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">  LinkedIn  </a>
-	</nav>
 	<p>Posted by: Jessica Tatham</p>
 	<p><time pubdate datetime = "2014-03-16"></time></p>
+	<!-- Start: TraceMyIP.org Code //-->
+	<script type="text/javascript" src="http://s2.tracemyip.org/tracker/lgUrl.php?stlVar2=1302&amp;rgtype=4684NR-IPIB&amp;pidnVar2=66490&amp;prtVar2=4&amp;scvVar2=12&amp;gustVarS=2&amp;gustVarU=47073&amp;gustVarM=2"></script><noscript><a  href="http://www.tracemyip.org/pv1-2-47073-2" target="_blank"><img src="http://s2.tracemyip.org/tracker/1302/4684NR-IPIB/66490/4/12/ans/" alt="track my ip" border="0"></a></noscript><br><a href="http://www.tracemyip.org/pv1-2-47073-2">Visitor Tracker</a>
+	<!-- End: TraceMyIP.org Code //-->
 </footer>
 
 </body>
