add visiter counter

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@ Robert Frost </strong></p>
 <footer>
 	<p>Posted by: Jessica Tatham</p>
 	<p><time pubdate datetime = "2014-03-16"></time></p>
-	<!-- Start: TraceMyIP.org Code //-->
-	<script type="text/javascript" src="http://s2.tracemyip.org/tracker/lgUrl.php?stlVar2=1302&amp;rgtype=4684NR-IPIB&amp;pidnVar2=66490&amp;prtVar2=4&amp;scvVar2=12&amp;gustVarS=2&amp;gustVarU=47073&amp;gustVarM=2"></script><noscript><a  href="http://www.tracemyip.org/pv1-2-47073-2" target="_blank"><img src="http://s2.tracemyip.org/tracker/1302/4684NR-IPIB/66490/4/12/ans/" alt="track my ip" border="0"></a></noscript><br><a href="http://www.tracemyip.org/pv1-2-47073-2">Visitor Tracker</a>
-	<!-- End: TraceMyIP.org Code //-->
+	<!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END -->
 </footer>
 
 </body>
