updating blog layout

--- a/week7_tech_blog.html
+++ b/week7_tech_blog.html
@@ -1,12 +1,13 @@
-<DOCTYPE! html>
 <html>
 <head>
-	<title>Blog</title>
+
+	<link rel="stylesheet" type="text/css" href="blog.css">
+	<title>Jessica Tatham Homepage</title>
+
 </head>
+
+
 <body>
-	<link rel="stylesheet" type="text/css" href="favorite_website.css">
-
-
 <header>
 	
 <figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
@@ -14,13 +15,32 @@
 </figure>
 
 </header>
+<nav class = "navbar">
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "#">Jessica Tatham</a>
+			<ul>
+				<li><a href = "dbc1.html">About Me</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+				<li><a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></li>
+				<li><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Blogs</a>
+			<ul>
+				<li><a href = "blog.html">Cultural Blogs</a></li>
+				<li><a href = "blog.html">Technical Blogs</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Travel</a>
+			<ul>
+				<li><a href = "dbc2.html">Photography</a></li>
+				<li><a href = "videos.html">Videos</a></li>
+			</ul>
+		</li>
 
-<nav class="button">
-	<a href = "index.html">Homepage</a>
-	<a href = "dbc1.html">About Me</a>
-	<a href = "blog.html">Blog</a>
-	<a href = "dbc2.html">Photography</a>
-	<a href = "vidios.html">Videos</a>
+	</ul>
 </nav>
 
 <h1>SQL vs. NoSQL</h1>
@@ -52,7 +72,11 @@
 <p>Both SQL and NoSQL have their places within the database world, it's just a matter of choosing which one will suit your purposes.</p>
 <p>I got most of my information for this blog post from thegeekstuff.com.</p>
 
+<footer>
+	<p>Posted by: Jessica Tatham</p>
+	<p><time pubdate datetime = "2014-03-16"></time></p>
+	<div class = "tracker"><!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END --></div>
+</footer>
+
 </body>
-
-
 </html>
