--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@ And that has made all the difference. </br>
 Robert Frost </strong></p>
 </section> </br>
 
-<iframe src="https://embed.spotify.com/?uri=spotify:user:1213418077:playlist:6hE1KYd1yRXcTR7qv7sCm1" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-
 
 <footer>
 	<p>Posted by: Jessica Tatham</p>
 	<p><time pubdate datetime = "2014-03-16"></time></p>
-	<!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END -->
+	<div class = "tracker"><!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END --></div>
 </footer>
 
 </body>
