--- a/favorite_websites.html
+++ b/favorite_websites.html
@@ -1,10 +1,13 @@
 <html>
 <head>
-	<title>Blog Spot</title>
-</head>
-<body>
-	<link rel="stylesheet" type="text/css" href="index.css">
 
+	<link rel="stylesheet" type="text/css" href="blog.css">
+	<title>Jessica Tatham Homepage</title>
+
+</head>
+
+
+<body>
 <header>
 	
 <figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
@@ -12,13 +15,32 @@
 </figure>
 
 </header>
+<nav class = "navbar">
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "#">Jessica Tatham</a>
+			<ul>
+				<li><a href = "dbc1.html">About Me</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+				<li><a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></li>
+				<li><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Blogs</a>
+			<ul>
+				<li><a href = "blog.html">Cultural Blogs</a></li>
+				<li><a href = "blog.html">Technical Blogs</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Travel</a>
+			<ul>
+				<li><a href = "dbc2.html">Photography</a></li>
+				<li><a href = "videos.html">Videos</a></li>
+			</ul>
+		</li>
 
-<nav class="button">
-	<a href = "index.html">Homepage</a>
-	<a href = "dbc1.html">About Me</a>
-	<a href = "blog.html">Blog</a>
-	<a href = "dbc2.html">Photography</a>
-	<a href = "vidios.html">Videos</a>
+	</ul>
 </nav>
 
 <h1>My Favorite Websites</h1>
@@ -31,6 +53,12 @@
 	<li><a href = "http://www.amazon.com">Amazon</a></li>
 		<p>		Amazon might not be the most exciting website in the world, but to me it has to be one of the best designed websites ever. If I ever need to buy something with no hassle, I always know that I can go straight to Amazon and I will find what I am looking for. The web design is easy to use, uncluttered, elegant, and colorful. I am always buying ebooks off of Amazon as well as clothes, computer accessories, and beauty products. The website walks you through the purchase process and leaves you at the end feeling happy and successful! </p>
 </ul>
-</body>
 
+<footer>
+	<p>Posted by: Jessica Tatham</p>
+	<p><time pubdate datetime = "2014-03-16"></time></p>
+	<div class = "tracker"><!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END --></div>
+</footer>
+
+</body>
 </html>
