--- a/blog.html
+++ b/blog.html
@@ -28,21 +28,22 @@
 
 <div class = "blogs"> 
 
-	<li><a href = "favorite_websites.html"> Favorite Websites </a> </li></br>
-	<li><a href = "week2_cultural_blog.html"> Values of Happiness </a></li> </br>
-	<li><a href = "week2_technical.html"> A Little Bit Technical </a></li></br>
-	<li><a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a></li> </br>
-	<li><a href = "week3_technical.html"> A Little Bit More Technical </a></li></br>
-	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li></br>
-	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
-	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li></br>
-	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li></br>
-	<li><a href = "week6_tech_blog.html"> Functional Programming vs. Object-Oriented Programming</a></li></br>
-	<li><a href = "week6_cultural_blog.html"> Stereotype Threat </a></li></br>
-	<li><a href = "week7_tech_blog.html"> SQL vs. NoSQL </a></li></br>
-	<li><a href = "week7_cultural_blog.html"> Revisiting My Values </a></li></br><li><a href = "week8_tech_blog.html"> What is Rails? </a></li></br>
-	<li><a href = "week8_cultural_blog.html"> Chefs in the Kitchen </a></li></br>
-	<li><a href = "week9_cultural_blog.html">Thinking Styles</a></li></br>
+	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
+	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
+	<a href = "week2_technical.html"> A Little Bit Technical </a></br>
+	<a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a></br>
+	<a href = "week3_technical.html"> A Little Bit More Technical </a></br>
+	<a href = "week4_cultural_blog.html"> Conflicting emotions </a></br>
+	<a href = "week4_tech_blog.html"> Let's learn something technical </a></br>
+	<a href = "week5_tech_blog.html"> Class Is In Session </a></br>
+	<a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></br>
+	<a href = "week6_tech_blog.html"> Functional Programming vs. Object-Oriented Programming</a></br>
+	<a href = "week6_cultural_blog.html"> Stereotype Threat </a></br>
+	<a href = "week7_tech_blog.html"> SQL vs. NoSQL </a></br>
+	<a href = "week7_cultural_blog.html"> Revisiting My Values </a></br>
+	<a href = "week8_tech_blog.html"> What is Rails? </a></br>
+	<a href = "week8_cultural_blog.html"> Chefs in the Kitchen </a></br>
+	<a href = "week9_cultural_blog.html">Thinking Styles</a></br>
 </div>
 
 
