--- a/week6_tech_blog.html
+++ b/week6_tech_blog.html
@@ -29,8 +29,8 @@
 		</li>
 		<li><a href = "#">Blogs</a>
 			<ul>
-				<li><a href = "blog.html">Cultural Blogs</a></li>
-				<li><a href = "blog.html">Technical Blogs</a></li>
+				<li><a href = "cultural_blog.html">Cultural Blogs</a></li>
+				<li><a href = "technical_blog.html">Technical Blogs</a></li>
 			</ul>
 		</li>
 		<li><a href = "#">Travel</a>
