updating about me page

--- a/dbc1.html
+++ b/dbc1.html
@@ -1,26 +1,51 @@
-<!DOCTYPE html>
-<!-- saved from url=(0040)http://jessicatatham.github.io/dbc1.html -->
 <html>
 <head>
-	<title>Jessica Tatham</title>
+
 	<link rel="stylesheet" type="text/css" href="dbc1.css">
+	<title>Jessica Tatham</title>
+
 </head>
+
+
 <body>
+<header>
+	
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
+</figure>
 
-	<h1>This is me: Jessica Tatham</h1>
+</header>
+<nav class = "navbar">
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "#">Jessica Tatham</a>
+			<ul>
+				<li><a href = "dbc1.html">About Me</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+				<li><a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></li>
+				<li><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Blogs</a>
+			<ul>
+				<li><a href = "blog.html">Cultural Blogs</a></li>
+				<li><a href = "blog.html">Technical Blogs</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Travel</a>
+			<ul>
+				<li><a href = "dbc2.html">Photography</a></li>
+				<li><a href = "videos.html">Videos</a></li>
+			</ul>
+		</li>
 
-<div id="sidebar"><strong>Website Navigation</strong>
-<a class="turn_green">
-	<nav><h4><a href="index.html">HomePage</a></h4></nav>
-	<nav><h4><a href="dbc2.html">Photography!</a></h4></nav>
-	<nav><h4><a href="#bucket-list">Bucket List</a></h4></nav>
-	<nav><h4> <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></h4></nav>
-	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
-	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
-</a>
-</div>
+	</ul>
+</nav>
 
-<div id="me"><img src = "images/1475781_10202713240416058_1929728279_n.jpg" alt = "images/1475781_10202713240416058_1929728279_n.jpg" height = "350" width = "480"></div>
+<h1>About Me</h1>
+
+<div id="sidebar"><img src = "images/1475781_10202713240416058_1929728279_n.jpg" alt = "images/1475781_10202713240416058_1929728279_n.jpg" height = "350" width = "480"></div>
 
 <br>
 <br><br>
@@ -63,19 +88,13 @@
 	<div><h4>Bucket List</h4>
 		<p>My bucket list is a never ending note on my iphone. It includes, a <span style="color:blue">3 month backpacking trip across Thiland, Cambodia, Vietnam and Laos</span>. As well as <span style="color:violet">seeing the great migration in the Serengeti</span> and doing a <span style="color: green">week long yoga retreat in Mexico</span>. </p></div>
 	</section>
-	<h5>Education</h5>
-		<p>
-			High School: <a href="http://webold.nsd.org/education/components/scrapbook/default.php?sectionid=37" target="_blank">Woodinville High School 2010</a> <br>
-			Running Start: <a href="http://www.cascadia.edu/" target="_blank">Cascadia Community College 2010</a> 
-				<strong>Degree: Associates of Integrated Studies</strong><br>
-			University: <a href="http://www.uidaho.edu/" target="_blank">University of Idaho 2013</a> 
-				<strong>Degree: Bachelors of Animal and Veterinary Science</strong><br>
-		</p>
 
 
+<footer>
+	<p>Posted by: Jessica Tatham</p>
+	<p><time pubdate datetime = "2014-03-16"></time></p>
+	<div class = "tracker"><!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END --></div>
+</footer>
 
-<footer> <h6>Now you know!!!<br>
-		Contact info: <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a>
-	</h6></footer>
-
-</body></html>
+</body>
+</html>
