update photography page

--- a/dbc2.html
+++ b/dbc2.html
@@ -1,26 +1,47 @@
-<DOCTYPE! html>
 <html>
 <head>
-	<title>Jessica Tatham</title>
-<link rel= "stylesheet" type = "text/css" href = "dbc2.css">
+
+	<link rel="stylesheet" type="text/css" href="dbc2.css">
+	<title>Photography</title>
 
 </head>
 
+
 <body>
-
-
-	<header><h1> Around the World </h1></header>
+<header>
 	
-<div id="sidebar"><strong>Website Navigation</strong>
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
+</figure>
 
-	<nav><h4><a href = "index.html">HomePage</a></h4></nav>
-	<nav><h4><a href = "dbc1.html">About Me!</a></h4></nav>
-	<nav><h4> <a href = "mailto:jectatham@gmail.com?subject=Greetings from your website!&body= What would you like to tell Jessica?">Email Jessica</a></h4></nav>
-	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
-	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
-</div>
+</header>
+<nav class = "navbar">
+	<ul>
+		<li><a href = "index.html">Home</a></li>
+		<li><a href = "#">Jessica Tatham</a>
+			<ul>
+				<li><a href = "dbc1.html">About Me</a></li>
+				<li><a href = "resume.html">Resume</a></li>
+				<li><a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></li>
+				<li><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></li>
+				<li><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Blogs</a>
+			<ul>
+				<li><a href = "blog.html">Cultural Blogs</a></li>
+				<li><a href = "blog.html">Technical Blogs</a></li>
+			</ul>
+		</li>
+		<li><a href = "#">Travel</a>
+			<ul>
+				<li><a href = "dbc2.html">Photography</a></li>
+				<li><a href = "videos.html">Videos</a></li>
+			</ul>
+		</li>
 
-
+	</ul>
+</nav>
 
 <div class="figure"><p>Hello World!</p>
 	<img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"></div>
@@ -47,7 +68,11 @@
 
 
 
-</body>
+<footer>
+	<p>Posted by: Jessica Tatham</p>
+	<p><time pubdate datetime = "2014-03-16"></time></p>
+	<div class = "tracker"><!-- Counter Code START --><a href="http://www.e-zeeinternet.com/" target="_blank"><img src="http://www.e-zeeinternet.com/count.php?page=1059365&style=plain_b&nbdigits=5&reloads=1" alt="Web Counter" border="0" ></a><br><a href="http://www.e-zeeinternet.com/" title="Web Counter" target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; font-size: 10px; color: #000000; text-decoration: none;">Web Counter</a><!-- Counter Code END --></div>
+</footer>
 
-<footer><div id= "footer">Thanks for visiting my website!</div></footer>
+</body>
 </html>
