update about me css

--- a/dbc1.html
+++ b/dbc1.html
@@ -45,7 +45,7 @@
 
 <h1>About Me</h1>
 
-<div id="sidebar"><img src = "images/1475781_10202713240416058_1929728279_n.jpg" alt = "images/1475781_10202713240416058_1929728279_n.jpg" height = "350" width = "480"></div>
+<img src = "images/1475781_10202713240416058_1929728279_n.jpg" alt = "images/1475781_10202713240416058_1929728279_n.jpg" height = "350" width = "480">
 
 <br>
 <br><br>
