--- a/dbc2.html
+++ b/dbc2.html
@@ -42,11 +42,11 @@
 
 	</ul>
 </nav>
-
+<div class = "images">
 <div class="figure"><p>Hello World!</p>
 	<img src = "images/IMG_8414 2.JPG" alt = "images/IMG_8414 2.JPG" height= "450px" width = "450px"></div>
 
-
+<div class = "images">
 <img src = "images/IMG_9071 2.JPG" alt = "images/IMG_9071 2.JPG" height= "400px" width = "400px">
 <img src = "images/IMG_8102 2.jpg" alt = "images/IMG_8102 2.jpg" height= "400px" width = "300px">
 <img src = "images/IMG_0810 4.jpg" alt = "images/IMG_0810 4.jpg" height= "400px" width = "400px">
@@ -66,7 +66,7 @@
 <img src = "images/IMG_7249_2.JPG" alt = "images/IMG_7249_2.JPG" height = "400" width = "1200">
 <img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 
-
+</div>
 
 <footer>
 	<p>Posted by: Jessica Tatham</p>
