add professional blog posts blog

--- a/cultural_blog.html
+++ b/cultural_blog.html
@@ -2,7 +2,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="blog.css">
-	<title>Jessica Tatham Homepage</title>
+	<title>Blog</title>
 
 </head>
 
@@ -67,6 +67,8 @@
 	<a href = "week8_cultural_blog.html"> Chefs in the Kitchen </a></br>
 
 	<a href = "week9_cultural_blog.html">Thinking Styles</a></br>
+
+	<a href = "professional_blogs.html">Professional Blog Posts</a></br>
 </div>
 
 <footer>
