--- a/professional_blogs.html
+++ b/professional_blogs.html
@@ -2,7 +2,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="blog.css">
-	<title>Jessica Tatham Homepage</title>
+	<title>Blog</title>
 
 </head>
 
@@ -43,13 +43,7 @@
 	</ul>
 </nav>
 
-</br><h1>My Travels</h1>
-
-<iframe width="560" height="315" src="//www.youtube.com/embed/tSqfXXhQcek" frameborder="0" allowfullscreen></iframe>
-
-</br>
-
-<iframe width="560" height="315" src="//www.youtube.com/embed/lBZu87HD4f8" frameborder="0" allowfullscreen></iframe>
+<h1>Professional Blog Posts</h1>
 
 <footer>
 	<p>Posted by: Jessica Tatham</p>
@@ -59,4 +53,3 @@
 
 </body>
 </html>
-
