--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -2,7 +2,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="blog.css">
-	<title>Jessica Tatham Homepage</title>
+	<title>Jessica's Blog</title>
 
 </head>
 
