--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <header>
 	
-<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
-	<figcaption align="center">Around the World and Back Again</figcaption>
+<figure class = "img"><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
+	<figcaption align="center" line-height:100%; >Around the World and Back Again</figcaption>
 </figure>
 
 </header>
