--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <header>
 	
 <figure class = "img"><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="100%" height=auto>
-	<figcaption align="center" line-height:100%; >Around the World and Back Again</figcaption>
+	<figcaption align="center">Around the World and Back Again</figcaption>
 </figure>
 
-</header>
 <nav class = "navbar">
 	<ul>
 		<li><a href = "index.html">Home</a></li>
@@ -42,6 +41,7 @@
 
 	</ul>
 </nav>
+</header>
 
 <section>
 	</br></br><p> 
