finished Professional Blog Posts blog

--- a/professional_blogs.html
+++ b/professional_blogs.html
@@ -45,6 +45,11 @@
 
 <h1>Professional Blog Posts</h1>
 
+<p>From my experience, I have found, that the most important aspect of blogging is having a purpose. With no purpose, you won't have an audience, and with no audience, than it wouldn't be a blog, but a diary. That being said, creating a professional website and professional blog post requires that you think of your audience.</p>
+
+<p>We just finished a challenge in which we had to get feedback on our websites/blogs and implement changes to improve our sites. This was extremely benifical for me as it gave me the opportunity to ask my audience what they wanted to see or what should be changed and make improvements based on their feedback. After making some changes, I believe that my website is much more user friendly and my blogs are much more professional. I still have a few improvements to make here or there, but my website is a work in progress as I continue to learn more about HTML and coding in general. </p>
+
+
 <footer>
 	<p>Posted by: Jessica Tatham</p>
 	<p><time pubdate datetime = "2014-03-16"></time></p>
