update about me

--- a/dbc1.html
+++ b/dbc1.html
@@ -50,7 +50,7 @@
 <br>
 <br><br>
 	<h3>A little bit about me</h3>
-		<p> I was born in Cape Town, <em>South Africa</em>. I've grown up all over the United States. I currently live in Seatlle, WA. For now, I am a nanny while I study computer programming!</p>
+		<p> I was born in Cape Town, South Africa and grew up in the United States. I am an aspiring Ruby developer, world traveler, book worm and animal lover. In just a couple of days, I am going to be moving to NYC for the summer to become an awesome DevBootCamp student!!!</p>
 
 
 <ul style="litst-style-typer:none; display: inline-block;">
