--- a/dbc2.html
+++ b/dbc2.html
@@ -65,11 +65,11 @@
 <img src = "images/IMG_3149 2.JPG" alt = "images/IMG_3149 2.JPG" height= "400px" width = "300px">
 <img src = "images/IMG_7249_2.JPG" alt = "images/IMG_7249_2.JPG" height = "400" width = "1200">
 <img src = "images/IMG_7966 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
-<img src="images/IMG_9137 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 <img src="images/IMG_0731 3.jpg" alt = "images/IMG_7966 2.JPG" height= "400px" width = "900px">
 <img src="images/IMG_3197.jpg" alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
-<img src="images/IMG_0721 4.jpg" alt = "images/IMG_7249_2.JPG" height = "400" width = "1200">
-<img src="images/IMG_3608 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "450px">
+<img src="images/IMG_9137 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "450px">
+<img src="images/IMG_0721 4.jpg" alt = "images/IMG_7249_2.JPG" height = "400" width = "auto">
+<img src="images/IMG_3608 2.JPG" alt = "images/IMG_7966 2.JPG" height= "400px" width = "500px">
 <img src="images/IMG_5421 2.jpg"  alt = "images/IMG_7966 2.JPG" height= "400px" width = "400px">
 <img src="images/IMG_9923.jpg"  alt = "images/IMG_7966 2.JPG" height= "400px" width = "460px">
 
